about us: Added trasnaltions to this page

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,11 +4,11 @@
     "translation": "What is HackerSchool?"
   },
   {
-    "id": "about_hacker_school",
+    "id": "about_what_is_1",
     "translation": "HackerSchool is an academic association focused on developing activities in a multidisciplinary, learn-by-doing environment with peer learning, inspired by the values of hacker culture."
   },
   {
-    "id": "about_formation",
+    "id": "about_what_is_2",
     "translation": "Here, regardless of your background, you learn to create new products and services using emerging technologies like the Internet of Things or the semantic web, utilizing low-cost solutions based on open electronics, open materials, and open fabrication, among others."
   },
   {
