--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -5,11 +5,11 @@
 
   },
   {
-    "id": "about_hacker_school",
+    "id": "about_what_is_1",
     "translation": "A HackerSchool é uma associação académica que se foca no desenvolvimento de actividades num ambiente multidisciplinar, de learn-by-doing e de aprendizagem entre pares, inspirado nos valores da cultura hacker."
   },
   {
-    "id": "about_formation",
+    "id": "about_what_is_2",
     "translation": "Aqui, independentemente da formação de base, aprende-se a criar novos produtos e serviços sobre tecnologias emergentes como a internet das coisas ou a web semântica, utilizando soluções de baixo custo assentes em open electronics, open materials, open fabrication, entre outros."
   },
   {
