--- a/i18n/en.json
+++ b/i18n/en.json
@@ -114,5 +114,53 @@
   {
     "id": "projetos_antigos",
     "translation": "Old Projects"
+  },
+    {
+    "id": "presidente",
+    "translation": "President"
+  },
+  {
+    "id": "vice_presidente",
+    "translation": "Vice-President"
+  },
+  {
+    "id": "tesoureiro",
+    "translation": "Treasurer"
+  },
+  {
+    "id": "co_coordenador_lab_e_cultura_hacker",
+    "translation": "Co-Coordinator Lab and Hacker Culture"
+  },
+  {
+    "id": "coordenador_dev",
+    "translation": "Coordinator Dev"
+  },
+  {
+    "id": "coordenador_rh",
+    "translation": "Coordinator HR"
+  },
+  {
+    "id": "coordenador_marketing",
+    "translation": "Coordinator Marketing"
+  },
+  {
+    "id": "rh",
+    "translation": "HR"
+  },
+  {
+    "id": "dev",
+    "translation": "Dev"
+  },
+  {
+    "id": "marketing",
+    "translation": "Marketing"
+  },
+  {
+    "id": "gestao_lab",
+    "translation": "Laboratory Management"
+  },
+  {
+    "id": "alumni",
+    "translation": "Alumni"
   }
 ]
