membros 24/25 e lista completa ordenanda alfabeticamente

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -133,15 +133,15 @@
   },
   {
     "id": "coordenador_dev",
-    "translation": "Coordinator Dev"
+    "translation": "Dev Coordinator"
   },
   {
     "id": "coordenador_rh",
-    "translation": "Coordinator HR"
+    "translation": "HR Coordinator"
   },
   {
     "id": "coordenador_marketing",
-    "translation": "Coordinator Marketing"
+    "translation": "Marketing Coordinator"
   },
   {
     "id": "rh",
